# proyek_6

./: Dockerfile  app.py  calibrate_rf_model_adaptor.py  docker-compose.yml  pipeline.ipynb  pyproject.toml  random_forest_model_adaptor.py  random_forest_trainer.py  transform_module.py  wsgi.py
analyst/: eda.ipynb
model_serving/1732608801/: model.pkl
monitoring/: Dockerfile  prometheus.config  prometheus.yml
rakhaeg-pipeline/: metadata.sqlite
rakhaeg-pipeline/Evaluator/evaluation/10/: attributions-00000-of-00001.tfrecord  eval_config.json  metrics-00000-of-00001.tfrecord
rakhaeg-pipeline/Evaluator/evaluation/8/: eval_config.json  metrics-00000-of-00001.tfrecord
rakhaeg-pipeline/ExampleValidator/anomalies/4/Split-eval/: SchemaDiff.pb
rakhaeg-pipeline/Pusher/pushed_model/11/: fingerprint.pb
rakhaeg-pipeline/Pusher/pushed_model/11/variables/: variables.data-00000-of-00001
rakhaeg-pipeline/SchemaGen/schema/3/: schema.pbtxt
rakhaeg-pipeline/StatisticsGen/statistics/2/Split-eval/: FeatureStats.pb
rakhaeg-pipeline/Transform/post_transform_anomalies/5/: SchemaDiff.pb
rakhaeg-pipeline/Transform/post_transform_schema/5/: schema.pbtxt
rakhaeg-pipeline/Transform/post_transform_stats/5/: FeatureStats.pb
rakhaeg-pipeline/Transform/pre_transform_stats/5/: FeatureStats.pb
rakhaeg-pipeline/_wheels/: tfx_user_code_Trainer-0.0+db0c52f50190d868ee0a12dbcb4a95a03d645297a5f99ee7348d5c3e06724388-py3-none-any.whl  tfx_user_code_Transform-0.0+db0c52f50190d868ee0a12dbcb4a95a03d645297a5f99ee7348d5c3e06724388-py3-none-any.whl
(+8 files in other folders)
